# cpp-backend-template

./: CMakeLists.txt
include/: application.hpp  signal.hpp
libraries/uSockets/: CMakeLists.txt
src/: application.cpp  main.cpp
src/unix/: signal.cpp
src/win32/: signal.cpp
